--- a/skillster/app/assets/stylesheets/skills.css.scss
+++ b/skillster/app/assets/stylesheets/skills.css.scss
@@ -1,3 +1,44 @@
-// Place all the styles related to the Skills controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import url(http://fonts.googleapis.com/css?family=Merriweather);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+#container {
+	width: 500px;
+	margin: 30px auto;
+	text-align: center;
+}
+p {
+	text-align: left;	
+}
+#content h1 {
+	font-size: 48px;
+	margin: 10px 0px;
+	font-family: "Open Sans", sans-serif;
+}
+#content {
+	border: 2px solid #7f8c8d;
+	padding: 20px;
+	margin-top: -27px;
+	background-color: white;
+	border-radius: 5px;
+}
+#container img {
+	border: 5px solid white;
+}
+body {
+	background-color:#bdc3c7;
+	font-family:"Merriweather", serif;
+	padding: 20px;
+}
+a {
+	color:#3498db;
+	text-decoration: none;
+	transition: 3s all ease;
+}
+a:hover {
+	color:#16a085;
+}
+h2 {
+	font-size: 24px;
+	font-family: "Open Sans", sans-serif;
+	margin: 10px 0px;
+}
