--- a/skillster/app/views/welcome/index.html.erb
+++ b/skillster/app/views/welcome/index.html.erb
@@ -1,6 +1,17 @@
-<% @skills.each do |skill| %>
-	<%= skill.name %>
-	<br>
-	<%= skill.description %>
-	<br>
-<% end %>
+<div id="container">
+	<img src="http://placekitten.com/100/100" alt="This is a kitten">
+	<div id="content">
+		<h1>Hi, I'm Andersen</h1>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. <a href="http://www.24hourfitness.com">24 hour fitness</a> Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat. Duis aute irure dolor in reprehenderit in voluptate velit esscillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<p>
+		<div id="skills">
+			<h2>My Skills</h2>
+		</div>
+	</div> <!--END #content -->
+</div> <!-- END #container -->
